began working on wavenet implementation

--- a/backprop_manual_exercises.ipynb
+++ b/backprop_manual_exercises.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 249,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 250,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 251,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 252,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 253,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 254,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 255,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,24 +174,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 273,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "torch.Size([1, 64])\n",
-      "torch.Size([1, 64])\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "tensor(3.3419, grad_fn=<NegBackward0>)"
+       "tensor(3.3385, grad_fn=<NegBackward0>)"
       ]
      },
-     "execution_count": 273,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -209,7 +201,6 @@
     "bndiff2 = bndiff**2\n",
     "bnvar = 1/(n-1)*(bndiff2).sum(0, keepdim=True) # note: Bessel's correction (dividing by n-1, not n)\n",
     "bnvar_inv = (bnvar + 1e-5)**-0.5\n",
-    "print(bnvar.shape)\n",
     "bnraw = bndiff * bnvar_inv\n",
     "hpreact = bngain * bnraw + bnbias\n",
     "# Non-linearity\n",
@@ -240,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 272,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +253,17 @@
       "bngain          | exact: True  | approximate: True  | maxdiff: 0.0\n",
       "bnbias          | exact: True  | approximate: True  | maxdiff: 0.0\n",
       "bnraw           | exact: True  | approximate: True  | maxdiff: 0.0\n",
-      "bnvar_inv       | exact: True  | approximate: True  | maxdiff: 0.0\n"
+      "bnvar_inv       | exact: True  | approximate: True  | maxdiff: 0.0\n",
+      "bnvar           | exact: True  | approximate: True  | maxdiff: 0.0\n",
+      "bndiff2         | exact: True  | approximate: True  | maxdiff: 0.0\n",
+      "bndiff          | exact: True  | approximate: True  | maxdiff: 0.0\n",
+      "bnmeani         | exact: True  | approximate: True  | maxdiff: 0.0\n",
+      "hprebn          | exact: True  | approximate: True  | maxdiff: 0.0\n",
+      "embcat          | exact: True  | approximate: True  | maxdiff: 0.0\n",
+      "W1              | exact: True  | approximate: True  | maxdiff: 0.0\n",
+      "b1              | exact: True  | approximate: True  | maxdiff: 0.0\n",
+      "emb             | exact: True  | approximate: True  | maxdiff: 0.0\n",
+      "C               | exact: True  | approximate: True  | maxdiff: 0.0\n"
      ]
     }
    ],
@@ -326,60 +327,159 @@
     "cmp('bnraw', dbnraw, bnraw)\n",
     "dbnvar_inv = (dbnraw * bndiff).sum(0, keepdim = True)\n",
     "cmp('bnvar_inv', dbnvar_inv, bnvar_inv)\n",
-    "dbnvar = dbnvar_inv * \n",
-    "# cmp('bnvar', dbnvar, bnvar)\n",
-    "# cmp('bndiff2', dbndiff2, bndiff2)\n",
-    "# cmp('bndiff', dbndiff, bndiff)\n",
-    "# cmp('bnmeani', dbnmeani, bnmeani)\n",
-    "# cmp('hprebn', dhprebn, hprebn)\n",
-    "# cmp('embcat', dembcat, embcat)\n",
-    "# cmp('W1', dW1, W1)\n",
-    "# cmp('b1', db1, b1)\n",
-    "# cmp('emb', demb, emb)\n",
-    "# cmp('C', dC, C)"
+    "dbnvar = dbnvar_inv * (-0.5 * (bnvar + 1e-5)**(-1.5))\n",
+    "cmp('bnvar', dbnvar, bnvar)\n",
+    "dbndiff2 = dbnvar * (1.0/(n-1) * torch.ones_like(bndiff2))\n",
+    "cmp('bndiff2', dbndiff2, bndiff2)\n",
+    "dbndiff = dbnraw * bnvar_inv + dbndiff2 * 2 * bndiff\n",
+    "cmp('bndiff', dbndiff, bndiff)\n",
+    "dbnmeani = -torch.ones_like(bnmeani) * dbndiff.sum(0,keepdim=True)\n",
+    "cmp('bnmeani', dbnmeani, bnmeani)\n",
+    "dhprebn = (1.0/n * torch.ones_like(hprebn)) * dbnmeani + dbndiff.clone()\n",
+    "cmp('hprebn', dhprebn, hprebn)\n",
+    "dembcat = dhprebn @ W1.T\n",
+    "cmp('embcat', dembcat, embcat)\n",
+    "dW1 = embcat.T @ dhprebn\n",
+    "cmp('W1', dW1, W1)\n",
+    "db1 = dhprebn.sum(0,keepdim=True)\n",
+    "cmp('b1', db1, b1)\n",
+    "demb = dembcat.view_as(emb)\n",
+    "cmp('emb', demb, emb)\n",
+    "dC = torch.zeros_like(C)\n",
+    "for k in range(Xb.shape[0]):\n",
+    "    for j in range(Xb.shape[1]):\n",
+    "        ix = Xb[k,j]\n",
+    "        dC[ix] += demb[k,j] \n",
+    "cmp('C', dC, C)\n",
+    "\n",
+    "#Done! backprop finished"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 73,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.3385207653045654 diff: -2.384185791015625e-07\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Exercise 2: backprop through cross_entropy but all in one go\n",
+    "# to complete this challenge look at the mathematical expression of the loss,\n",
+    "# take the derivative, simplify the expression, and just write it out\n",
+    "\n",
+    "# forward pass\n",
+    "\n",
+    "# before:\n",
+    "# logit_maxes = logits.max(1, keepdim=True).values\n",
+    "# norm_logits = logits - logit_maxes # subtract max for numerical stability\n",
+    "# counts = norm_logits.exp()\n",
+    "# counts_sum = counts.sum(1, keepdims=True)\n",
+    "# counts_sum_inv = counts_sum**-1 # if I use (1.0 / counts_sum) instead then I can't get backprop to be bit exact...\n",
+    "# probs = counts * counts_sum_inv\n",
+    "# logprobs = probs.log()\n",
+    "# loss = -logprobs[range(n), Yb].mean()\n",
+    "\n",
+    "# now:\n",
+    "loss_fast = F.cross_entropy(logits, Yb)\n",
+    "print(loss_fast.item(), 'diff:', (loss_fast - loss).item())"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 74,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dlogits         | exact: False | approximate: True  | maxdiff: 7.683411240577698e-09\n"
+     ]
+    }
+   ],
+   "source": [
+    "dlogits = F.softmax(logits, 1)\n",
+    "dlogits[range(n), Yb] -= 1 \n",
+    "dlogits /= n\n",
+    "cmp('dlogits', dlogits, logits)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 75,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "max diff: tensor(9.5367e-07, grad_fn=<MaxBackward1>)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Exercise 3: backprop through batchnorm but all in one go\n",
+    "# to complete this challenge look at the mathematical expression of the output of batchnorm,\n",
+    "# take the derivative w.r.t. its input, simplify the expression, and just write it out\n",
+    "# BatchNorm paper: https://arxiv.org/abs/1502.03167\n",
+    "\n",
+    "# forward pass\n",
+    "\n",
+    "# before:\n",
+    "# bnmeani = 1/n*hprebn.sum(0, keepdim=True)\n",
+    "# bndiff = hprebn - bnmeani\n",
+    "# bndiff2 = bndiff**2\n",
+    "# bnvar = 1/(n-1)*(bndiff2).sum(0, keepdim=True) # note: Bessel's correction (dividing by n-1, not n)\n",
+    "# bnvar_inv = (bnvar + 1e-5)**-0.5\n",
+    "# bnraw = bndiff * bnvar_inv\n",
+    "# hpreact = bngain * bnraw + bnbias\n",
+    "\n",
+    "# now:\n",
+    "hpreact_fast = bngain * (hprebn - hprebn.mean(0, keepdim=True)) / torch.sqrt(hprebn.var(0, keepdim=True, unbiased=True) + 1e-5) + bnbias\n",
+    "print('max diff:', (hpreact_fast - hpreact).abs().max())"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 76,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hprebn          | exact: False | approximate: True  | maxdiff: 9.313225746154785e-10\n"
+     ]
+    }
+   ],
+   "source": [
+    "# backward pass\n",
+    "\n",
+    "# before we had:\n",
+    "# dbnraw = bngain * dhpreact\n",
+    "# dbndiff = bnvar_inv * dbnraw\n",
+    "# dbnvar_inv = (bndiff * dbnraw).sum(0, keepdim=True)\n",
+    "# dbnvar = (-0.5*(bnvar + 1e-5)**-1.5) * dbnvar_inv\n",
+    "# dbndiff2 = (1.0/(n-1))*torch.ones_like(bndiff2) * dbnvar\n",
+    "# dbndiff += (2*bndiff) * dbndiff2\n",
+    "# dhprebn = dbndiff.clone()\n",
+    "# dbnmeani = (-dbndiff).sum(0)\n",
+    "# dhprebn += 1.0/n * (torch.ones_like(hprebn) * dbnmeani)\n",
+    "\n",
+    "# calculate dhprebn given dhpreact (i.e. backprop through the batchnorm)\n",
+    "# (you'll also need to use some of the variables from the forward pass up above)\n",
+    "\n",
+    "\n",
+    "dhprebn = bngain*bnvar_inv/n * (n*dhpreact - dhpreact.sum(0) - n/(n-1)*bnraw*(dhpreact*bnraw).sum(0))\n",
+    "\n",
+    "cmp('hprebn', dhprebn, hprebn) # I can only get approximate to be true, my maxdiff is 9e-10"
+   ]
   }
  ],
  "metadata": {
