Added transformer.ipynb as a cleaned up version of the transofmer architecture, leaving gpt as a testing/ learning playground

--- a/wavenet.ipynb
+++ b/wavenet.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,22 +15,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "32033\n",
-      "15\n",
-      "['emma', 'olivia', 'ava', 'isabella', 'sophia', 'charlotte', 'mia', 'amelia']\n"
+      "9118\n",
+      "27\n",
+      "['abaco', 'abbondanza', 'abbondanzia', 'abbondanzio', 'abbondazio', 'abbondia', 'abbondina', 'abbondio']\n"
      ]
     }
    ],
    "source": [
     "# read in all the words\n",
-    "words = open('names.txt', 'r').read().splitlines()\n",
+    "words = open('nomi_italiani.txt', 'r').read().splitlines()\n",
     "print(len(words))\n",
     "print(max(len(w) for w in words))\n",
     "print(words[:8])"
@@ -38,15 +38,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{1: 'a', 2: 'b', 3: 'c', 4: 'd', 5: 'e', 6: 'f', 7: 'g', 8: 'h', 9: 'i', 10: 'j', 11: 'k', 12: 'l', 13: 'm', 14: 'n', 15: 'o', 16: 'p', 17: 'q', 18: 'r', 19: 's', 20: 't', 21: 'u', 22: 'v', 23: 'w', 24: 'x', 25: 'y', 26: 'z', 0: '.'}\n",
-      "27\n"
+      "{1: ' ', 2: \"'\", 3: ',', 0: '.', 5: 'a', 6: 'b', 7: 'c', 8: 'd', 9: 'e', 10: 'f', 11: 'g', 12: 'h', 13: 'i', 14: 'j', 15: 'k', 16: 'l', 17: 'm', 18: 'n', 19: 'o', 20: 'p', 21: 'q', 22: 'r', 23: 's', 24: 't', 25: 'u', 26: 'v', 27: 'w', 28: 'x', 29: 'y', 30: 'z', 31: 'Ë', 32: 'Ï', 33: 'Ú', 34: '˘', 35: '‡'}\n",
+      "35\n"
      ]
     }
    ],
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,16 +75,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "torch.Size([182625, 8]) torch.Size([182625])\n",
-      "torch.Size([22655, 8]) torch.Size([22655])\n",
-      "torch.Size([22866, 8]) torch.Size([22866])\n"
+      "torch.Size([59036, 8]) torch.Size([59036])\n",
+      "torch.Size([7295, 8]) torch.Size([7295])\n",
+      "torch.Size([7410, 8]) torch.Size([7410])\n"
      ]
     }
    ],
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,14 +235,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "23483\n"
+      "24259\n"
      ]
     }
    ],
